ui/src/components/LinkPreview/LinkPreview.css
.link-preview {
    @apply relative rounded-lg overflow-hidden shadow top-0 left-0;
    @apply w-full my-2 sm:max-w-[50%] sm:float-left sm:clear-left sm:mr-2 sm:mt-0;
    @apply sm:hover:shadow-lg sm:hover:-top-0.5 sm:hover:-left-0.5;
    transition: top .2s, left .2s, box-shadow .1s;

    .preview-img {
        @apply block relative;

        img {
            @apply w-full min-h-[2lh];
        }

        span {
            @apply block absolute right-0 top-0 py-2 px-4 bg-surface/60 rounded-bl-lg border-l border-b border-subtle-extra-light backdrop-blur-sm;
        }
    }

    .description {
        @apply py-2 px-4 bg-primary text-primary-contrast;
    }
}

.link-preview-hover-card {
    @apply rounded-lg bg-surface p-4 w-fit max-w-[300px];
    filter: drop-shadow(1px 1px 10px rgb(0 0 0 / 0.1));

    &[data-state="open"] {
        @apply animate-in fade-in-80 slide-in-from-bottom-2;
    }

    &[data-state="closed"] {
        @apply animate-out fade-out zoom-out-95;
    }
}

.link-preview-hover-card-arrow {
    @apply fill-surface h-2 w-4;
}

